make sure that nothing overflows the user map

--- a/internal/static/map.css
+++ b/internal/static/map.css
@@ -4,6 +4,10 @@
 	overflow: visible;
 }
 
+.isUser #map {
+	overflow: hidden;
+}
+
 #map > g:not(#outline) {
 	clip-path: view-box;
 }
